# finance_politics

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  compass_artifact_wf-296d500c-6900-462f-9308-22262c592522_text_markdown.md  loop.sh  pyproject.toml
app/: __init__.py  calculo.py  config_loader.py  db.py  guard.py  ingest.py  ingest_legislativo.py  judge.py  legislativo.py  llm.py  medidas_ia.py  ministros.py  models.py  pastas.py  payload.py  resumo.py  ui.py
app/fetchers/: base.py  bcb.py  camara.py  ipea.py  senado_vetos.py  sidra.py  tesouro.py
config/: indicadores.yaml  mandatos.yaml  ministros.yaml  pastas.yaml
docs/superpowers/: notas-fontes-legislativo.md
docs/superpowers/plans/: 2026-06-20-nucleo-economico.md  2026-06-21-camada-legislativa.md  2026-06-21-camada-ministerial.md  2026-06-21-ingestao-e-filtro-periodo.md  (+3 more)
specs/: 2026-06-20-nucleo-economico.md  2026-06-21-camada-legislativa.md  2026-06-21-camada-ministerial.md
tests/: test_calculo.py  test_config_loader.py  test_db.py  test_fetchers_bcb.py  test_fetchers_camara.py  test_fetchers_ipea.py  test_fetchers_senado_vetos.py  test_fetchers_sidra.py  test_fetchers_tesouro.py  test_guard.py  test_ingest.py  test_ingest_legislativo.py  test_judge.py  test_legislativo.py  test_llm.py  test_medidas_ia.py  test_ministros.py  test_models.py  test_pastas.py  test_payload.py  test_resumo.py  test_smoke.py  test_ui_smoke.py
tests/fixtures/: bcb_432.json  ipea_gini.json  sidra_6468.json  sidra_7435_gini.json  tesouro_sample.json
(+7 files in other folders)
